--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Cloud Federation using Resource Sharing Contracts
+title: PADS
 description: 
-baseurl: "/ContractsCloud" 
-url: "https://bpln.github.io/ContractsCloud"
+baseurl: "/PADS" 
+url: "https://bpln.github.io/PADS"
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
