init version completed

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PADS
-description: 
+description: Privacy-preserving Auction Design for Allocating Dynamically Priced Cloud Resources
 baseurl: "/PADS" 
 url: "https://bpln.github.io/PADS"
 show_downloads: false
